# tree-sitter-highlight-wasm

./: Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
