[package]
name = "tree-sitter-highlight"
version = "0.25.9"
description = "Library for performing syntax highlighting with Tree-sitter"
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Tim Clem <timothy.clem@gmail.com>",
]
edition = "2021"
rust-version = "1.82"
readme = "README.md"
homepage = "https://tree-sitter.github.io/tree-sitter"
repository = "https://github.com/tree-sitter/tree-sitter"
license = "MIT"
keywords = ["incremental", "parsing", "syntax", "highlighting"]
categories = ["parsing", "text-editors"]

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
regex = "1.11.1"
thiserror = "2.0.11"
streaming-iterator = "0.1.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tree-sitter = "0.25"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tree-sitter = { package = "tree-sitter-c2rust", version = "0.25" }
